--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,4 +17,4 @@ services:
         volumes:
              - /etc/letsencrypt/:/etc/letsencrypt/
         links:
-            - web
+            - app
