--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,7 +11,7 @@ http {
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
-        server_name edupulse.ru www.edupulse.ru;
+        server_name edupulse.ru;
         return 301 https://www.$server_name$request_uri;
     }
 
