--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,13 +6,13 @@ http {
     sendfile on;
 
     upstream app_servers {
-        server app:5000;
+        server app:80;
     }
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
         server_name edupulse.ru;
-        return 301 https://www.$server_name$request_uri;
+        return 301 https://$server_name$request_uri;
     }
 
     server {
