--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,8 @@ version: '3'
 services: 
     app:
         build: .
-        ports: 
-            - ${HTTP_PORT}:80
-            - ${HTTPS_PORT}:443
+        expose: 
+            - ${HTTP_PORT}
         environment: 
             - ConnectionStrings:DefaultConnection= ${CONNECTION_STRING}
     proxy:
