--- a/Planner/appsettings.Development.json
+++ b/Planner/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DESKTOP-LB4G8SG\\SQLEXPRESS;Initial Catalog=Planner2;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-LB4G8SG\\SQLEXPRESS;Initial Catalog=Planner2;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
