--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CONNECTION_STRING=Server=plannerdb.cpod2qdwnh4w.us-east-2.rds.amazonaws.com;Database=Planner;User Id=admin;Password=DPvpFwQ7;
-HTTP_PORT=80
+CONNECTION_STRING=Server=plannerdb.cpod2qdwnh4w.us-east-2.rds.amazonaws.com;Database=KronxData;User Id=admin;Password=DPvpFwQ7;
+HTTP_PORT=5050
