--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,7 +21,7 @@ http {
         ssl_certificate_key /etc/letsencrypt/live/edupulse.ru/privkey.pem;
 
         location / {
-            proxy_pass         http://app_servers;
+            proxy_pass         http://app_servers:5050;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
