--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,22 +6,22 @@ http {
     sendfile on;
 
     upstream app_servers {
-        server app:5050;
+        server app:80;
     }
     server {
-        listen 5050 default_server;
-        listen [::]:5050 default_server;
+        listen 80 default_server;
+        listen [::]:80 default_server;
         server_name edupulse.ru;
         return 301 https://$server_name$request_uri;
     }
 
     server {
-        listen 44301 ssl;
+        listen 443 ssl;
         ssl_certificate /etc/letsencrypt/live/edupulse.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/edupulse.ru/privkey.pem;
 
         location / {
-            proxy_pass         http://app_servers:5050;
+            proxy_pass         http://app_servers;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
