add holidays in shedule

--- a/Planner.Data.Contract/Planner.Data.Contract.csproj
+++ b/Planner.Data.Contract/Planner.Data.Contract.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Planner.Models\Planner.Models.csproj" />
+    <ProjectReference Include="..\Planner.Services.Contract\Planner.Services.Contract.csproj" />
   </ItemGroup>
 
 </Project>
